--- a/config.yaml
+++ b/config.yaml
@@ -122,6 +122,12 @@ params:
       useBR: false
       #classPrefix: 'hljs-'
       languages: {}   # language alias
+  katex:
+    js: //cdn.bootcss.com/KaTeX/0.7.1/katex.min.js
+    css: //cdn.bootcss.com/KaTeX/0.7.1/katex.min.css
+    autorender: //cdn.bootcss.com/KaTeX/0.7.1/contrib/auto-render.min.js
+  mathjax:
+    js: //cdn.bootcss.com/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML
   jquery:
     js: //cdn.bootcss.com/jquery/3.2.1/jquery.min.js
     migrate: //cdn.bootcss.com/jquery-migrate/1.4.1/jquery-migrate.min.js
