--- a/config.yaml
+++ b/config.yaml
@@ -103,8 +103,10 @@ params:
   favicon: /favicon.ico
   ugly: ".html"
   search:
-    url: //google.com/search
+    url: //www.bing.com/search
     keywork: q
+    sitename: q1
+    siteprefix: "site:"
   bootstrap:
     # js: //cdn.bootcss.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js
     js: //maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js
