update deps, add sitesource and pagesource

--- a/config.yaml
+++ b/config.yaml
@@ -100,6 +100,7 @@ params:
   description: "Chanllege Everything"
   author: "OWenT"
   githubuser: "owt5008137"
+  sitesource: "https://github.com/owent/blog-hugo"
   favicon: /favicon.ico
   ugly: ".html"
   search:
@@ -113,7 +114,7 @@ params:
     # css: //cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css
     css: //cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css
     popper:
-      js: //cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js
+      js: //cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js
   highlightjs:
     style: "vs2015"      # style name
     langs: ['capnproto', 'cmake', 'd', 'dos', 'erlang', 'go', 'less', 'lua', 'php', 'powershell', 'protobuf', 'profile', 'typescript', 'vim', 'rust' ]
