--- a/config.yaml
+++ b/config.yaml
@@ -144,6 +144,8 @@ params:
     migrate: //cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js
   chartjs:
     js: //cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js
+  mermaid:
+    js: //cdnjs.cloudflare.com/ajax/libs/mermaid/8.0.0-rc.8/mermaid.min.js
 
 menu:
   main:
