--- a/config.yaml
+++ b/config.yaml
@@ -62,12 +62,18 @@ pluralizeListTitles:        true
 preserveTaxonomyNames:      false
 # filesystem path to write files to
 publishDir:                 "public"
+# Set to true to enable syntax highlighting in code fences with a language tag in markdown
+pygmentsCodefences:         true
 # enables syntax guessing for code fences without specified language
 pygmentsCodeFencesGuessSyntax: false
 # color-codes for highlighting derived from this style
-pygmentsStyle:              "monokai"
+pygmentsStyle:              "dracula"
 # true: use pygments-css or false: color-codes directly
-pygmentsUseClasses:         false
+pygmentsUseClasses:         true
+# A comma separated list of options.
+pygmentsOptions:            ""
+# Set to true to use Pygments instead of the much faster Chroma.
+pygmentsUseClassic:         false
 # maximum number of items in the RSS feed
 rssLimit:                   100
 # default sitemap configuration map
@@ -102,6 +108,7 @@ params:
   githubuser: "owt5008137"
   sitesource: "https://github.com/owent/blog-hugo"
   favicon: /favicon.ico
+  css: ["css/syntax.css"]
   ugly: ".html"
   search:
     url: //www.bing.com/search
@@ -109,36 +116,16 @@ params:
     sitename: q1
     siteprefix: "site:"
   bootstrap:
-    # js: //cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.min.js
-    js: //cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js
-    # css: //cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.min.css
-    css: //cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css
+    # js: //cdn.bootcss.com/bootstrap/4.1.3/js/bootstrap.min.js
+    js: //cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js
+    # css: //cdn.bootcss.com/bootstrap/4.1.3/css/bootstrap.min.css
+    css: //cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css
     popper:
       js: //cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js
-  highlightjs:
-    style: "vs2015"      # style name
-    langs: ['capnproto', 'cmake', 'd', 'dos', 'erlang', 'go', 'less', 'lua', 'php', 'powershell', 'protobuf', 'profile', 'typescript', 'vim', 'rust' ]
-    selector: 'pre>code'
-    version: '9.12.0'
-    url:                  # 
-      # js: "//cdn.bootcss.com/highlight.js/%VERSION%/highlight.min.js"
-      js: //cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/highlight.min.js
-      # style: "//cdn.bootcss.com/highlight.js/%VERSION%/styles/%STYLE%.min.css"
-      style: //cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/styles/%STYLE%.min.css
-      # lang: "//cdn.bootcss.com/highlight.js/%VERSION%/languages/%LANG%.min.js"
-      lang: //cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/languages/%LANG%.min.js
-    options:              # options of highlight.js see http://highlightjs.readthedocs.io/en/latest/api.html#configure-options
-      tabReplace: '    '
-      useBR: false
-      #classPrefix: 'hljs-'
-      languages: {}   # language alias
   katex:
     js: //cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0/katex.min.js
     css: //cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0/katex.min.css
     autorender: //cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0/contrib/auto-render.min.js
-  mathjax:
-    # js: //cdn.bootcss.com/mathjax/2.7.4/MathJax.js?config=TeX-AMS-MML_HTMLorMML
-    # js: //cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-AMS-MML_HTMLorMML
   jquery:
     js: //cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js
     migrate: //cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js
