--- a/config.yaml
+++ b/config.yaml
@@ -63,11 +63,11 @@ preserveTaxonomyNames:      false
 # filesystem path to write files to
 publishDir:                 "public"
 # Set to true to enable syntax highlighting in code fences with a language tag in markdown
-pygmentsCodefences:         true
+pygmentsCodefences:         false
 # enables syntax guessing for code fences without specified language
 pygmentsCodeFencesGuessSyntax: false
 # color-codes for highlighting derived from this style
-pygmentsStyle:              "dracula"
+pygmentsStyle:              "github"
 # true: use pygments-css or false: color-codes directly
 pygmentsUseClasses:         true
 # A comma separated list of options.
@@ -122,6 +122,23 @@ params:
     css: //cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css
     popper:
       js: //cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js
+  highlightjs:
+    style: "vs2015"      # style name
+    langs: ['capnproto', 'cmake', 'd', 'dos', 'erlang', 'go', 'less', 'lua', 'php', 'powershell', 'protobuf', 'profile', 'typescript', 'vim', 'rust' ]
+    selector: 'pre>code'
+    version: '9.13.1'
+    url:                  # 
+      # js: "//cdn.bootcss.com/highlight.js/%VERSION%/highlight.min.js"
+      js: //cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/highlight.min.js
+      # style: "//cdn.bootcss.com/highlight.js/%VERSION%/styles/%STYLE%.min.css"
+      style: //cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/styles/%STYLE%.min.css
+      # lang: "//cdn.bootcss.com/highlight.js/%VERSION%/languages/%LANG%.min.js"
+      lang: //cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/languages/%LANG%.min.js
+    options:              # options of highlight.js see http://highlightjs.readthedocs.io/en/latest/api.html#configure-options
+      tabReplace: '    '
+      useBR: false
+      #classPrefix: 'hljs-'
+      languages: {}   # language alias
   katex:
     js: //cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0/katex.min.js
     css: //cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0/katex.min.css
