--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,11 @@
 *.sh eol=lf
 *.py eol=lf
 *.md eol=crlf
+*.css eol=crlf
+*.sass eol=crlf
+*.scss eol=crlf
+*.html eol=crlf
+*.css.map eol=crlf
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.tar.* filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
