--- a/themes/distinctionpp/.gitattributes
+++ b/themes/distinctionpp/.gitattributes
@@ -1,3 +1,18 @@
 *.sh eol=lf
 *.py eol=lf
 *.md eol=crlf
+*.css eol=crlf
+*.sass eol=crlf
+*.scss eol=crlf
+*.html eol=crlf
+*.css.map eol=crlf
+*.zip filter=lfs diff=lfs merge=lfs -text
+*.tar.* filter=lfs diff=lfs merge=lfs -text
+*.tgz filter=lfs diff=lfs merge=lfs -text
+*.7z filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.jpeg filter=lfs diff=lfs merge=lfs -text
+*.bmp filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
+*.ico filter=lfs diff=lfs merge=lfs -text
