--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,8 @@ after_success:
 
     git add . ;
 
+    git -c user.name='travis' -c user.email='deploy@travis-ci.org' commit -m "Delpoy owent.net for $TRAVIS_COMMIT($TRAVIS_COMMIT_MESSAGE)";
+
 cache: 
   apt: true
   ccache: true
