--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,7 @@ after_success:
 
     ls -A | xargs git add ;
 
-    git -c user.name='travis' -c user.email='deploy@travis-ci.org' commit -m "Delpoy owent.net for $TRAVIS_COMMIT($TRAVIS_COMMIT_MESSAGE)";
+    git -c user.name='travis' -c user.email='deploy@travis-ci.org' commit -a -m "Delpoy owent.net for $TRAVIS_COMMIT($TRAVIS_COMMIT_MESSAGE)";
 
     git push -f -q https://owt5008137:$GITHUB_TOKEN@github.com/owent/blog-website HEAD:master ;
 
