--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install dependencies
       run: |
         # sudo apt update -y && sudo apt install -y graphviz python3
-        sudo snap install hugo && sudo snap install refresh 
+        sudo snap install hugo # && sudo snap install refresh 
     - name: Build blog website
       run: |
         bash deploy.sh
