--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install dependencies
       run: |
         # sudo apt update -y && sudo apt install -y graphviz python3
-        sudo snap install hugo # && sudo snap install refresh 
+        sudo snap install hugo && sudo snap refresh hugo
     - name: Build blog website
       run: |
         bash deploy.sh
@@ -25,7 +25,7 @@ jobs:
         chmod 700 $HOME/.ssh
         echo "${{ secrets.ACTIONS_DEPLOY_KEY }}" > $HOME/.ssh/id_rsa.action
         chmod 600 $HOME/.ssh/id_rsa.action
-        export GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no User=owent IdentityFile=$HOME/.ssh/id_rsa.action"
+        export GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o User=owent -o IdentityFile=$HOME/.ssh/id_rsa.action"
         if [ -e public_repo ] && [ ! -e public_repo ]; then rm -rf public_repo ; fi
         git clone --depth=1 --single-branch --branch "master" "git@github.com:owent/blog-website.git" "public_repo"
         cd public_repo
