--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,11 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
+      with:
+        submodules: false
+        lfs: true
+        clean: clean
+        path: ${GITHUB_WORKSPACE}/source
     - uses: actions/setup-go@v1
       with:
         go-version: '1.x'
@@ -18,6 +23,7 @@ jobs:
         sudo snap install hugo && sudo snap refresh hugo
     - name: Build blog website
       run: |
+        cd "${GITHUB_WORKSPACE}/source"
         bash deploy.sh
     - name: Deploy blog website
       run: |
@@ -26,11 +32,11 @@ jobs:
         echo "${{ secrets.ACTIONS_DEPLOY_KEY }}" > $HOME/.ssh/id_rsa.action
         chmod 600 $HOME/.ssh/id_rsa.action
         export GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -o User=owent -o IdentityFile=$HOME/.ssh/id_rsa.action"
-        if [ -e public_repo ] && [ ! -e public_repo ]; then rm -rf public_repo ; fi
-        git clone --depth=1 --single-branch --branch "master" "git@github.com:owent/blog-website.git" "public_repo"
-        cd public_repo
+        if [ -e "${GITHUB_WORKSPACE}/public_repo" ]; then rm -rf "${GITHUB_WORKSPACE}/public_repo" ; fi
+        git clone --depth=1 --single-branch --branch "master" "git@github.com:owent/blog-website.git" "${GITHUB_WORKSPACE}/public_repo"
+        cd "${GITHUB_WORKSPACE}/public_repo"
         git rm -r '*'
-        find "${GITHUB_WORKSPACE}/public" -maxdepth 1 | tail -n +2 | xargs -I % cp -rf % "$PWD"
+        find "${GITHUB_WORKSPACE}/source/public" -maxdepth 1 | tail -n +2 | xargs -I % cp -rf % "$PWD"
         echo "owent.net" > CNAME
         git config user.name "owent"
         git config user.email "admin@owent.net"
