--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         submodules: false
         lfs: true
         clean: clean
-        path: ${GITHUB_WORKSPACE}/source
+        path: source
     - uses: actions/setup-go@v1
       with:
         go-version: '1.x'
@@ -23,6 +23,7 @@ jobs:
         sudo snap install hugo && sudo snap refresh hugo
     - name: Build blog website
       run: |
+        echo "GITHUB_WORKSPACE=${GITHUB_WORKSPACE}"
         cd "${GITHUB_WORKSPACE}/source"
         bash deploy.sh
     - name: Deploy blog website
