--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        hugo: [0.58.2]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v1
@@ -22,19 +21,24 @@ jobs:
     - name: Install dependencies
       run: |
         # sudo apt update -y && sudo apt install -y graphviz python3
-        sudo snap install hugo && sudo snap refresh hugo
-        HUGO_ROOT="${GITHUB_WORKSPACE}/../hugo-${{ matrix.hugo }}"
+        TAG_URL="https://api.github.com/repos/gohugoio/hugo/releases/latest"
+        NEW_VER="$(curl -s "${TAG_URL}" --connect-timeout 10| grep 'tag_name' | cut -d\" -f4)"
+        HUGO_ROOT="${GITHUB_WORKSPACE}/../hugo-$NEW_VER"
         mkdir -p "$HUGO_ROOT"
         if [ ! -e "$HUGO_ROOT/hugo" ]; then
           cd "$HUGO_ROOT"
-          wget https://github.com/gohugoio/hugo/releases/download/v${{ matrix.hugo }}/hugo_${{ matrix.hugo }}_Linux-64bit.tar.gz
-          tar -axvf hugo_${{ matrix.hugo }}_Linux-64bit.tar.gz
+          wget https://github.com/gohugoio/hugo/releases/download/$NEW_VER/hugo_${NEW_VER:1}_Linux-64bit.tar.gz
+          tar -axvf hugo_${NEW_VER:1}_Linux-64bit.tar.gz
         fi
+        if [ -e "${GITHUB_WORKSPACE}/../hugo-latest" ]; then
+          rm -rf "${GITHUB_WORKSPACE}/../hugo-latest";
+        fi
+        ln -s "$HUGO_ROOT" "${GITHUB_WORKSPACE}/../hugo-latest" ;
     - name: Build blog website
       run: |
         echo "GITHUB_WORKSPACE=${GITHUB_WORKSPACE}"
         cd "${GITHUB_WORKSPACE}"
-        export PATH="${GITHUB_WORKSPACE}/../hugo-${{ matrix.hugo }}:$PATH"
+        export PATH="${GITHUB_WORKSPACE}/../hugo-latest:$PATH"
         bash "deploy.sh"
     - name: Deploy blog website
       run: |
